envoy_conf.yaml
admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address: { address: 127.0.0.1, port_value: 8001 }

node:
  id: default
  cluster: default

static_resources:
  listeners:
  - name: demo1
    address:
      socket_address:
        address: 127.0.0.1
        port_value: 1111
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        config:
          codec_type: auto
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: backend
              domains:
              - "*"
              routes:
              - match:
                  prefix: "/"
                route:
                  cluster: demo
          http_filters:
          - name: envoy.router
  clusters:
  - name: demo
    connect_timeout: 0.25s
    type: static
    lb_policy: round_robin
    health_checks:
      tcp_health_check: {}
      timeout: 1s
      interval: 2s
      interval_jitter: 1s
      healthy_threshold: 3
      unhealthy_threshold: 3
    load_assignment:
      cluster_name: demo1 # for EDS
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 127.0.0.1
                port_value: 80
